# MarkFlowy

./: .eslintrc  .gitignore  .prettierrc.js  .rustfmt.toml  .yarnrc.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.src.md  README_CN.md  README_JA.md  SECURITY.md  community-themes.json  dark.css  index.html  install.json  jest.config.ts  package.json  pnpm-lock.yaml  renovate.json  rollup.config.mjs  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  tsconfig.rollup.json  turbo.json  vite.config.ts  windi.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  codeql.yml  contribute_list.yml  dependabot-auto.yml  dependabot.yml  nodejs.yml  nrg.yml  tauri-release-test.yml  tauri-release.yml  test-bundle.yml  test-ci.yml  translate-check.yml
apps/desktop/: .env.example  .gitignore  UPDATE_LOG.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main-capability.json
apps/desktop/src-tauri/capabilities/schemas/: macOS-schema.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: fc.rs  font.rs  lib.rs  main.rs  menu.rs  search.rs  setup.rs
apps/desktop/src-tauri/src/app/: bookmarks.rs  clipboard.rs  conf.rs  extensions.rs  file_watcher.rs  keybindings.rs  mod.rs  opened_cache.rs  process.rs  themes.rs  window_manager.rs  workspace.rs
apps/desktop/src-tauri/src/task_system/: README.md  error.rs  lib.rs  message.rs  mod.rs  system.rs  task.rs
apps/desktop/src-tauri/src/task_system/tests/: integration_test.rs
apps/desktop/src-tauri/src/task_system/tests/common/: actors.rs  jobs.rs  tasks.rs
apps/desktop/src-tauri/src/task_system/worker/: mod.rs  run.rs  runner.rs
apps/home/: README.md  next-i18next.config.js  next.config.js  package.json  pnpm-lock.yaml
apps/linebyline/: .gitignore  package.json  tsconfig.json  vite.config.ts
apps/playground/: index.html  package.json  tsconfig.json
apps/server/: .dockerignore  .gitignore  Cargo.toml  README.md
apps/server/db/migrations/: 20240616111752_user_init.sql  20240616111756_theme_init.sql  20250322111760_settings_init.sql
apps/server/src/: config.rs  context.rs  env.rs  lib.rs  logger.rs  main.rs  route.rs  scalar.rs  schema.rs
apps/server/src/db/: mod.rs
apps/server/src/domain/: mod.rs
apps/server/src/domain/health/: entities.rs  mod.rs  resolver.rs
apps/server/src/domain/health/model/: mod.rs
apps/server/src/domain/health/service/: get_health.rs  mod.rs
apps/server/src/domain/meta/: entities.rs  mod.rs  resolver.rs
apps/server/src/domain/meta/model/: mod.rs
apps/server/src/domain/meta/service/: get_meta.rs  mod.rs
apps/server/src/domain/settings/: entities.rs  error.rs  mod.rs  resolver.rs
apps/server/src/domain/settings/model/: input.rs  mod.rs
apps/server/src/domain/settings/repository/: create_settings.rs  delete_settings.rs  find_settings_by_user_id.rs  mod.rs  update_settings.rs
apps/server/src/domain/settings/service/: create_settings.rs  delete_settings.rs  find_settings_by_user_id.rs  mod.rs  update_settings.rs
apps/server/src/domain/theme/: entities.rs  error.rs  mod.rs  resolver.rs
apps/server/src/domain/theme/model/: input.rs  mod.rs
apps/server/src/domain/theme/repository/: create_theme.rs  delete_theme.rs  find_all_themes.rs  find_theme_by_id.rs  mod.rs  update_theme.rs
apps/server/src/domain/theme/service/: create_theme.rs  delete_theme.rs  find_theme_by_id.rs  find_themes.rs  mod.rs  update_theme.rs
apps/server/src/domain/user/: entities.rs  error.rs  handler.rs  mod.rs  resolver.rs
apps/server/src/domain/user/model/: input.rs  mod.rs
apps/server/src/domain/user/repository/: create_user.rs  delete_user.rs  find_all_users.rs  find_user_by_email.rs  find_user_by_id.rs  find_user_by_name.rs  mod.rs  update_user.rs
apps/server/src/domain/user/service/: check_useremail_exists.rs  check_username_exists.rs  create_user.rs  delete_user.rs  find_user.rs  find_user_by_email.rs  find_user_by_id.rs  find_users.rs  mod.rs  notify_user.rs  update_user.rs
apps/server/src/driver/: mod.rs
apps/server/src/driver/mailer/: mod.rs
apps/server/src/error/: app.rs  mod.rs
apps/server/src/relay/: mod.rs  validation.rs
apps/server/src/utils/: crypto.rs  jwt.rs  mod.rs
apps/server/tests/: schema.graphql  tests.hurl
apps/server/tests/health/: graphql.rs  main.rs  schema.rs  tests.rs
apps/server/tests/meta/: graphql.rs  schema.rs  tests.rs
apps/server/tests/settings/: graphql.rs  schema.rs  tests.rs
apps/server/tests/theme/: graphql.rs  main.rs  schema.rs  tests.rs
apps/server/tests/user/: create_user.rs  delete_user.rs  duplicate_username.rs  find_user.rs  graphql.rs  main.rs  relay.rs  schema.rs  update_user.rs
apps/web/: .env.example  .eslintrc.json  .gitignore  .jest.config.js  LICENSE  README.md  contentlayer.config.js  global.d.ts  next-i18next.config.js  next.config.js  next__mdx.d.ts  package.json  tsconfig.eslint.json  tsconfig.json  tsconfig.tsbuildinfo
cli/: Cargo.toml
cli/src/: release.rs
core/runtime-api/: index.d.ts  package.json  (+2 more)
crates/download_npm/: Cargo.toml
crates/download_npm/src/: lib.rs
crates/download_npm/tests/: lib.rs
crates/file_search/: Cargo.toml
crates/file_search/src/: exclude.rs  fileinfo.rs  lib.rs  manager.rs  options.rs  rgtools.rs  search.rs
docs/: README.md  docusaurus.config.js  github-api-encoding-bug-report.md  github-workspace-bug-report.md  package.json  sidebars.js
locales/: en.json  es.json  fr-FR.json  ja.json  zh-CN.json
scripts/: dev-desktop.mjs  fix-webview2.js  fixed-webview2.js  release.js  translate-check.js  translate-locals.js  use-offline-bundle.js
src/: App.tsx  colors.ts  globalStyles.ts  index.css  main.tsx  styles.ts
src-tauri/: Cargo.toml  tauri.conf.json
tools/cli/: Cargo.toml
tools/cli/src/: lib.rs  main.rs  release.rs  utils.rs
tools/cli/tests/: release.rs
(+728 files in other folders)
