[package]
name = "download_npm"
version = "0.0.1"
edition = "2021"
description = "Download npm package"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
mf-utils = { path = "../utils" }
flate2 = "1.0"
tar = "0.4.40"
