[package]
name = "file_search"
version = "0.0.1"
edition = "2021"
description = "main rusl library"

[dependencies]
regex = "1.10.1"
num_cpus = "1.15.0" # for parallel search
grep = "0.2.12" #ripgrep
ignore = "0.4.20" #parallel walker from ripgrep
walkdir = "2.4.0" #walker from ripgrep
clipboard = "0.5.0" #for clipboard
dirs = "5.0.1" #for getting config file
serde = { version="1.0.189", features=["derive"]}  #save config
toml = "0.8.1" #config format
uuid = { version = "1.4.1", features = ["v4"] }
