[package]
name = "file_search"
version = "0.0.1"
edition = "2021"
description = "main rusl library"

[dependencies]
regex = "1.10.3"
num_cpus = "1.15.0" # for parallel search
grep = "0.3.1" #ripgrep
ignore = "0.4.22" #parallel walker from ripgrep
walkdir = "2.4.0" #walker from ripgrep
clipboard = "0.5.0" #for clipboard
dirs = "5.0.1" #for getting config file
serde = { version="1.0.196", features=["derive"]}  #save config
toml = "0.8.1" #config format
uuid = { version = "1.7.0", features = ["v4"] }
