[package]
name = "mf_file_search"
version = "0.0.1"
edition = "2021"
description = "main rusl library"
license = "MIT"

[dependencies]
regex = "1.10.4"
num_cpus = "1.15.0" # for parallel search
grep = "0.3.1" #ripgrep
ignore = "0.4.22" #parallel walker from ripgrep
walkdir = "2.5.0" #walker from ripgrep
clipboard = "0.5.0" #for clipboard
dirs = "5.0.1" #for getting config file
serde = { version="1.0.201", features=["derive"]}  #save config
toml = "0.8.13" #config format
uuid = { version = "1.8.0", features = ["v4"] }
