[package]
name = "mfdev"
version = "3.0.0"
edition = "2021"
author = "drl990114"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.3"
log = "0.4.21"
os_pipe = "1"
toml = "0.8.23"

[dependencies.clap]
version = "4.5.35"
features = [
    "cargo",
    "derive",
]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.117"
features = ["preserve_order"]
