[package]
name = "markflowy"
version = "0.11.2"
description = "A Markdown Editor App"
authors = ["drl990114"]
license = " AGPL-3.0"
repository = "https://github.com/drl990114/MarkFlowy"
edition = "2021"

[lib]
name = "markflowy"
crate-type = [
    "staticlib",
    "cdylib",
    "rlib",
]

[build-dependencies.tauri-build]
version = "2.0.0-beta.17"
features = []

[dependencies]
serde_json = "1.0"
anyhow = "1.0.86"
dark-light = "1.1.1"
log = "0.4.21"
tauri-plugin-updater = "2.0.0-beta.7"
tauri-plugin-http = "2.0.0-beta.10"
tauri-plugin-window-state = "2.0.0-beta.9"
tauri-plugin-store = "2.0.0-beta.8"
tauri-plugin-os = "2.0.0-beta.6"
tauri-plugin-shell = "2.0.0-beta.7"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-clipboard-manager = "2.1.0-beta.4"
regex = "1.10.4"
lazy_static = "1.4.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
window-vibrancy = "0.5.0"
dotenv = "0.15.0"

[dependencies.tauri-plugin-aptabase]
git = "https://github.com/aptabase/tauri-plugin-aptabase"
branch = "v2"

[dependencies.tauri-plugin-notification]
version = "2.0.0-beta.7"
features = ["windows7-compat"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tauri]
version = "2.0.0-beta.22"
features = [
    "protocol-asset",
    "devtools",
]

[dependencies.mf-utils]
path = "../../../crates/utils"

[dependencies.mf_file_search]
path = "../../../crates/file_search"

[dependencies.download_npm]
path = "../../../crates/download_npm"

[dependencies.tokio]
version = "1"
features = ["full"]

[target."cfg(any(target_os = \"macos\"))".dependencies]
cocoa = "0.25"
objc = "0.2.7"

[features]
custom-protocol = ["tauri/custom-protocol"]
