[package]
name = "markflowy"
version = "0.34.1"
description = "A Markdown Editor App"
authors = ["drl990114"]
license = " AGPL-3.0"
repository = "https://github.com/drl990114/MarkFlowy"
edition = "2021"

[lib]
name = "markflowy"
crate-type = [
    "staticlib",
    "cdylib",
    "rlib",
]

[build-dependencies.tauri-build]
version = "2.1.0"
features = []

[dependencies]
serde_json = "1.0"
anyhow = "1.0.86"
dark-light = "1.1.1"
log = "0.4.21"
tauri-plugin-updater = "2.6.1"
tauri-plugin-http = "2.4.2"
tauri-plugin-window-state = "2.2.1"
tauri-plugin-store = "2.2.0"
tauri-plugin-os = "2.2.1"
tauri-plugin-shell = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-clipboard-manager = "2.2.2"
regex = "1.10.4"
lazy_static = "1.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.20"
window-vibrancy = "0.5.0"
dotenv = "0.15.0"
trash = "5.2.2"
etcetera = "0.10.0"
font-kit = "0.14.3"
url = "2.5.2"
urlencoding = "2.1.3"
downcast-rs = "1.2"
notify = "6.1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.async-channel]
version = "2.3"

[dependencies.async-trait]
version = "0.1.88"

[dependencies.futures]
version = "0.3.31"

[dependencies.futures-concurrency]
version = "7.6.2"

[dependencies.pin-project-lite]
version = "0.2.15"

[dependencies.thiserror]
version = "2.0.8"

[dependencies.tokio]
version = "1.41.0"
features = [
    "full",
    "parking_lot",
    "rt-multi-thread",
    "sync",
    "time",
]

[dependencies.tokio-stream]
version = "0.1.17"

[dependencies.uuid]
version = "1.16.0"
features = ["v4"]

[dependencies.natural-sort-rs]
version = "0.2.1"
features = ["alloc"]

[dependencies.tauri-plugin-notification]
version = "2.2.2"
features = ["windows7-compat"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tauri]
version = "2.4.0"
features = [
    "protocol-asset",
    "devtools",
]

[dependencies.mf-utils]
path = "../../../crates/utils"

[dependencies.mf_file_search]
path = "../../../crates/file_search"

[dependencies.download_npm]
path = "../../../crates/download_npm"

[target.'cfg(any(target_os = "macos"))'.dependencies]
cocoa = "0.26"
objc = "0.2.7"

[features]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies.lending-stream]
version = "1.0"

[dev-dependencies.rand]
version = "0.9.0"

[dev-dependencies.rmp-serde]
version = "1.3"

[dev-dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dev-dependencies.tempfile]
version = "3.3.0"

[dev-dependencies.thiserror]
version = "2.0.8"

[dev-dependencies.tokio]
version = "1.41.0"
features = [
    "fs",
    "macros",
    "test-util",
]

[dev-dependencies.tracing-subscriber]
version = "0.3.20"
features = ["env-filter"]

[dev-dependencies.tracing-test]
version = "0.2.5"
features = ["no-env-filter"]

[dev-dependencies.uuid]
version = "1.16.0"
features = ["serde"]
